--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "build": "vuedx-typecheck . && vite build"
   },
   "dependencies": {
-    "vue": "^3.0.5"
+    "element-plus": "^1.0.1-beta.27",
+    "vue": "^3.0.5",
+    "vue-router": "4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.0.4",
     "@vue/compiler-sfc": "^3.0.5",
     "@vuedx/typecheck": "^0.4.1",
     "@vuedx/typescript-plugin-vue": "^0.4.1",
+    "stylus": "^0.54.8",
     "typescript": "^4.1.3",
     "vite": "^2.0.0-beta.12"
   }
