--- a/package.json
+++ b/package.json
@@ -8,18 +8,25 @@
   },
   "dependencies": {
     "element-plus": "^1.0.1-beta.27",
+    "highlight.js": "^10.5.0",
     "lodash": "^4.17.20",
     "vue": "^3.0.5",
     "vue-router": "4"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.167",
+    "@types/node": "^14.14.21",
     "@vitejs/plugin-vue": "^1.0.4",
     "@vue/compiler-sfc": "^3.0.5",
     "@vuedx/typecheck": "^0.4.1",
     "@vuedx/typescript-plugin-vue": "^0.4.1",
+    "markdown-it": "^12.0.4",
+    "markdown-it-anchor": "^7.0.0",
+    "markdown-it-chain": "^1.3.0",
+    "markdown-it-container": "^3.0.0",
     "sass": "^1.32.4",
     "stylus": "^0.54.8",
+    "transliteration": "^2.2.0",
     "typescript": "^4.1.3",
     "vite": "^2.0.0-beta.12"
   }
