--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "vue-router": "4"
   },
   "devDependencies": {
+    "@types/glob": "^7.1.3",
     "@types/lodash": "^4.14.167",
     "@types/node": "^14.14.21",
     "@vitejs/plugin-vue": "^1.0.4",
     "@vue/compiler-sfc": "^3.0.5",
     "@vuedx/typecheck": "^0.4.1",
     "@vuedx/typescript-plugin-vue": "^0.4.1",
+    "glob": "^7.1.6",
     "markdown-it": "^12.0.4",
     "markdown-it-anchor": "^7.0.0",
     "markdown-it-chain": "^1.3.0",
