--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "element-plus": "^1.0.1-beta.27",
     "highlight.js": "^10.5.0",
     "lodash": "^4.17.20",
+    "resize-observer-polyfill": "^1.5.1",
     "vue": "^3.0.5",
     "vue-router": "4"
   },
